--- a/package.json
+++ b/package.json
@@ -3,30 +3,59 @@
   "version": "1.0.0",
   "description": "Google 스프레드시트 기반 시나리오를 Playwright 테스트 스텁 코드로 자동 생성하는 도구",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "bin": "dist/cli.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "files": [
+    "dist/**/*",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "tsx core/index.ts",
-    "generate": "tsx core/index.ts",
-    "optimize": "tsx core/index.ts optimize"
+    "build": "rollup -c",
+    "dev": "tsx core/index.ts"
   },
   "dependencies": {
     "fs-extra": "^11.1.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.53.1",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.3",
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.8.0",
+    "rollup": "^4.44.0",
+    "tslib": "^2.8.1",
     "tsx": "^4.6.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5"
+  },
+  "peerDependencies": {
+    "@playwright/test": "^1.40.0"
   },
   "keywords": [
     "playwright",
     "e2e",
     "test-generation",
-    "automation"
+    "cli"
   ],
-  "author": "",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dhlab/e2e-autogen.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dhlab/e2e-autogen/issues"
+  },
+  "homepage": "https://github.com/dhlab/e2e-autogen#readme",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "packageManager": "yarn@4.8.1"
 }
