🚸 예시 시나리오와 생성되는 파일 example 폴더로 옮긴다

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,11 @@
     "emitDecoratorMetadata": true
   },
   "include": ["core/**/*"],
-  "exclude": ["node_modules", "dist", "__generated__", "scenarios", ".yarn"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "example/__generated__",
+    "scenarios",
+    ".yarn"
+  ]
 }
