--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dev": "tsx core/index.ts"
   },
   "dependencies": {
-    "fs-extra": "^11.1.1"
+    "@google-cloud/local-auth": "2.1.0",
+    "fs-extra": "^11.1.1",
+    "googleapis": "105"
   },
   "devDependencies": {
     "@playwright/test": "^1.53.1",
