--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "rollup -c",
-    "dev": "tsx core/index.ts"
+    "dev": "tsx core/cli.ts"
   },
   "dependencies": {
     "@google-cloud/local-auth": "2.1.0",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@playwright/test": "^1.53.1",
     "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.3",
     "@types/fs-extra": "^11.0.1",
