✨ [TC-x] 시트를 수집하여 일괄 변환한다

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,5 @@
     "emitDecoratorMetadata": true
   },
   "include": ["core/**/*"],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "example/__generated__",
-    "scenarios",
-    ".yarn"
-  ]
+  "exclude": ["node_modules", "dist", ".yarn"]
 }
