--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "dev": "tsx core/index.ts"
   },
   "dependencies": {
-    "@google-cloud/local-auth": "2.1.0",
     "fs-extra": "^11.1.1",
-    "googleapis": "105"
+    "googleapis": "105",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.53.1",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
@@ -26,12 +25,8 @@
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.8.0",
     "rollup": "^4.44.0",
-    "tslib": "^2.8.1",
     "tsx": "^4.6.0",
     "typescript": "^5"
-  },
-  "peerDependencies": {
-    "@playwright/test": "^1.40.0"
   },
   "keywords": [
     "playwright",
