--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dhlab/e2e-autogen",
-  "version": "1.0.0",
-  "description": "Google 스프레드시트 기반 시나리오를 Playwright 테스트 스텁 코드로 자동 생성하는 도구",
+  "version": "0.1.0",
+  "description": "Google 스프레드시트 기반 시나리오를 Playwright 테스트 스텁 코드로 자동 생성하고, 테스트 실행 결과를 다시 시트에 업데이트하는 CLI 도구",
   "bin": "dist/index.js",
   "files": [
     "dist/**/*",
