--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "fs-extra": "^11.1.1",
+    "google-auth-library": "^10.1.0",
     "googleapis": "105",
     "tslib": "^2.8.1"
   },
@@ -25,6 +26,7 @@
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.8.0",
     "rollup": "^4.44.0",
+    "ts-pattern": "^5.7.1",
     "tsx": "^4.6.0",
     "typescript": "^5"
   },
