--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   ],
   "scripts": {
     "build": "rollup -c",
-    "dev": "tsx core/index.ts"
+    "dev": "tsx core/index.ts",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "fs-extra": "^11.1.1",
@@ -25,10 +27,12 @@
     "@rollup/plugin-typescript": "^12.1.3",
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.8.0",
+    "@vitest/ui": "^3.2.4",
     "rollup": "^4.44.0",
     "ts-pattern": "^5.7.1",
     "tsx": "^4.6.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.4"
   },
   "keywords": [
     "playwright",
