🔧 CLI, ESM을 지원하고, e2e-autogen/playwright를 제공한다

--- a/package.json
+++ b/package.json
@@ -1,10 +1,29 @@
 {
   "name": "@dhlab/e2e-autogen",
+  "bin": "dist/core/cli.cjs",
+  "exports": {
+    "./playwright": {
+      "import": "./dist/packages/playwright/index.js",
+      "types": "./dist/packages/playwright/index.d.ts",
+      "require": "./dist/packages/playwright/index.cjs",
+      "default": "./dist/packages/playwright/index.cjs"
+    },
+    "./playwright/reporter": {
+      "require": "./dist/packages/playwright/reporter.cjs",
+      "default": "./dist/packages/playwright/reporter.cjs"
+    },
+    "./detox": {
+      "import": "./dist/packages/detox/index.js",
+      "types": "./dist/packages/detox/index.d.ts",
+      "require": "./dist/packages/detox/index.cjs",
+      "default": "./dist/packages/detox/index.cjs"
+    }
+  },
   "version": "0.1.2",
   "description": "Google 스프레드시트 기반 시나리오를 Playwright 테스트 스텁 코드로 자동 생성하고, 테스트 실행 결과를 다시 시트에 업데이트하는 CLI 도구",
-  "bin": "dist/index.js",
   "files": [
     "dist/**/*",
+    "packages/**/*",
     "README.md",
     "LICENSE"
   ],
@@ -21,6 +40,7 @@
     "tslib": "^2.8.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
@@ -33,6 +53,18 @@
     "tsx": "^4.6.0",
     "typescript": "^5",
     "vitest": "^3.2.4"
+  },
+  "peerDependencies": {
+    "@playwright/test": ">=1.30.0",
+    "detox": ">=20.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@playwright/test": {
+      "optional": true
+    },
+    "detox": {
+      "optional": true
+    }
   },
   "keywords": [
     "playwright",
