--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "tsx": "^4.6.0"
   },
   "devDependencies": {
+    "@msw/playwright": "^0.4.2",
     "@playwright/test": "^1.52.0",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-json": "^6.1.0",
@@ -51,10 +52,14 @@
   },
   "peerDependencies": {
     "@playwright/test": ">=1.30.0",
+    "@msw/playwright": "^0.4.2",
     "detox": ">=20.0.0"
   },
   "peerDependenciesMeta": {
     "@playwright/test": {
+      "optional": true
+    },
+    "@msw/playwright": {
       "optional": true
     },
     "detox": {
