--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
       "default": "./dist/config/define-config.cjs"
     },
     "./playwright/reporter": {
+      "import": "./dist/packages/playwright/reporter.js",
+      "types": "./dist/packages/playwright/reporter.d.ts",
       "require": "./dist/packages/playwright/reporter.cjs",
       "default": "./dist/packages/playwright/reporter.cjs"
+    },
+    "./playwright": {
+      "import": "./dist/packages/playwright/index.js",
+      "types": "./dist/packages/playwright/index.d.ts",
+      "require": "./dist/packages/playwright/index.cjs",
+      "default": "./dist/packages/playwright/index.cjs"
     }
   },
   "version": "0.1.3",
@@ -37,6 +45,7 @@
   "devDependencies": {
     "@msw/playwright": "^0.4.2",
     "@playwright/test": "^1.52.0",
+    "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
@@ -45,21 +54,22 @@
     "@types/node": "^20.8.0",
     "@vitest/ui": "^3.2.4",
     "rollup": "^4.44.0",
+    "rollup-plugin-dts": "^6.2.1",
     "ts-pattern": "^5.7.1",
     "tsx": "^4.6.0",
     "typescript": "^5",
     "vitest": "^3.2.4"
   },
   "peerDependencies": {
-    "@playwright/test": ">=1.30.0",
     "@msw/playwright": "^0.4.2",
+    "@playwright/test": ">=1.30.0",
     "detox": ">=20.0.0"
   },
   "peerDependenciesMeta": {
-    "@playwright/test": {
+    "@msw/playwright": {
       "optional": true
     },
-    "@msw/playwright": {
+    "@playwright/test": {
       "optional": true
     },
     "detox": {
