--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "fs-extra": "^11.1.1",
     "google-auth-library": "^10.1.0",
     "googleapis": "105",
