✨ 시나리오 기반 API 응답 테스트를 위한 mswScenarioTest fixture를 도입한다 (#31)

--- a/tsconfig.cli.json
+++ b/tsconfig.cli.json
@@ -1,9 +1,11 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "module": "NodeNext",
     "declaration": false,
     "declarationMap": false,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "baseUrl": "."
   },
   "include": ["core/cli.ts"],
   "exclude": ["node_modules", "dist", ".yarn"]
