--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "bin": "dist/core/cli.cjs",
   "exports": {
     ".": {
-      "import": "./dist/core/define-config.js",
-      "types": "./dist/core/define-config.d.ts",
-      "require": "./dist/core/define-config.cjs",
-      "default": "./dist/core/define-config.cjs"
+      "import": "./dist/config/index.js",
+      "types": "./dist/config/index.d.ts",
+      "require": "./dist/config/index.cjs",
+      "default": "./dist/config/index.cjs"
+    },
+    "./playwright": {
+      "import": "./dist/packages/playwright/index.js",
+      "require": "./dist/packages/playwright/index.cjs",
+      "types": "./dist/packages/playwright/index.d.ts",
+      "default": "./dist/packages/playwright/index.cjs"
     },
     "./playwright/reporter": {
       "require": "./dist/packages/playwright/reporter.cjs",
-      "default": "./dist/packages/playwright/reporter.cjs"
+      "types": "./dist/packages/playwright/reporter.d.ts"
     }
   },
   "version": "0.1.3",
@@ -22,12 +28,13 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "rollup -c && tsc --project tsconfig.declaration.json",
+    "build": "rollup -c",
     "dev": "tsx core/cli.ts",
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "fs-extra": "^11.1.1",
     "google-auth-library": "^10.1.0",
     "googleapis": "105",
@@ -35,6 +42,7 @@
     "tsx": "^4.6.0"
   },
   "devDependencies": {
+    "@msw/playwright": "^0.4.2",
     "@playwright/test": "^1.52.0",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-json": "^6.1.0",
@@ -43,17 +51,23 @@
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.8.0",
     "@vitest/ui": "^3.2.4",
+    "fast-glob": "^3.3.3",
     "rollup": "^4.44.0",
+    "rollup-plugin-dts": "^6.2.1",
     "ts-pattern": "^5.7.1",
     "tsx": "^4.6.0",
     "typescript": "^5",
     "vitest": "^3.2.4"
   },
   "peerDependencies": {
+    "@msw/playwright": "^0.4.2",
     "@playwright/test": ">=1.30.0",
     "detox": ">=20.0.0"
   },
   "peerDependenciesMeta": {
+    "@msw/playwright": {
+      "optional": true
+    },
     "@playwright/test": {
       "optional": true
     },
